# multi_doc_rag

./: .gitignore  Dockerfile  conftest.py  pyproject.toml  requirements.txt  test.py
.github/workflows/: aws.yml  ci.yml  task_defination.json
data/: data.txt  qa_pairs.csv
multi_doc_chat/config/: config.yaml
multi_doc_chat/src/document_ingestion/: data_ingestion.py
multi_doc_chat/utils/: document_ops.py  model_loader.py
notebooks/: Evaluations.ipynb  RAG.ipynb
unit/: test_data_ingestion.py
