[project]
name = "llmops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=7.1.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]
    
[tool.setuptools]
packages = ["multi_doc_chat"]

[tool.setuptools.package-dir]
"" = "."